--- a/dev/prototypes/courses/css/main.scss
+++ b/dev/prototypes/courses/css/main.scss
@@ -119,7 +119,7 @@ nav li {
 
 nav p {
   font-size: 0.9em;
-  margin-top: 0.6rem;
+  margin-top: 0.5rem;
 }
 
 nav a {
@@ -193,6 +193,13 @@ li aside {
   text-transform: uppercase;
   letter-spacing: 0.06rem;
   margin-right: 0.4rem;
+}
+
+.topics li:first-child {
+  background-color: #eee;
+  border: 1px solid #ccc;
+  padding-left: 0.325rem;
+  border-radius: 0.375rem;
 }
 
 .topics a {
@@ -312,6 +319,12 @@ summary {
   margin-left: 0.8rem;
 }
 
+// .input-toggle {
+//   float: left;
+//   margin-left: -1.25rem;
+//   margin-right: 0.25rem;
+// }
+
 label[for="toggle-full"],
 label[for="toggle-short"],
 label[for="toggle-tutorial"] {
@@ -325,28 +338,100 @@ label[for="toggle-tutorial"] {
 #toggle-tutorial {
   display: inline-block;
   position: absolute;
-  left: -0.5rem;
+  left: -0.4rem;
 }
 
 label[for="toggle-full"],
 #toggle-full {
-  top: 28.125rem;
+  top: 27rem;
 }
 
 label[for="toggle-short"],
 #toggle-short {
-  top: 31.65rem;
+  top: 30.4rem;
 }
 
 label[for="toggle-tutorial"],
 #toggle-tutorial {
-  top: 35.2rem;
+  top: 33.9rem;
 }
+
+@media (min-width: 40em) and (max-width: 64em) {
+
+label[for="toggle-full"],
+#toggle-full {
+  top: 9.2rem;
+  left: 18.5rem;
+  margin-left: 5%;
+}
+
+label[for="toggle-short"],
+#toggle-short {
+  top: 12.7rem;
+  left: 18.5rem;
+  margin-left: 5%;
+}
+
+label[for="toggle-tutorial"],
+#toggle-tutorial {
+  top: 16.1rem;
+  left: 18.5rem;
+  margin-left: 5%;
+}
+
+label[for="toggle-full"],
+label[for="toggle-short"],
+label[for="toggle-tutorial"] {
+  left: 20rem;
+}
+
+}
+
+@media (min-width: 64em) {
+
+label[for="toggle-full"],
+#toggle-full {
+  top: 28rem;
+}
+
+label[for="toggle-short"],
+#toggle-short {
+  top: 31.4rem;
+}
+
+label[for="toggle-tutorial"],
+#toggle-tutorial {
+  top: 34.9rem;
+}
+
+}
+
+// header ~ label,
+// header ~ input {
+//   position: absolute;
+//   white-space: nowrap;
+//   clip: rect(0, 0, 0, 0);
+//   width: 1px;
+//   height: 1px;
+//   padding: 0;
+//   border: 0;
+//   margin: -1px;
+//   overflow: hidden;
+// }
 
 #toggle-full:not(:checked) ~ [role="list"] .full,
 #toggle-short:not(:checked) ~ [role="list"] .short,
 #toggle-tutorial:not(:checked) ~ [role="list"] .tutorial {
   display: none;
+}
+
+.input-toggle:checked ~ ul[role="list"] li.response {
+  display: none;
+}
+
+.input-toggle:not(:checked) ~ ul[role="list"] li.response {
+  display: grid;
+  background-color: #ff9;
 }
 
 [is="comp-1"] .topics :link,
@@ -396,19 +481,24 @@ label[for="toggle-tutorial"],
 #full:target .full,
 #short:target .short,
 #tutorial:target .tutorial,
-#view-all-courses:target li[class],
-#view-all-formats:target li[class] {
+#all-courses:target li[class],
+#all-formats:target li[class] {
   display: grid;
 }
 
+nav [href="#all-courses"],
 #web-design:target nav [href="#web-design"],
 #web-development:target nav [href="#web-development"],
 #ux:target nav [href="#ux"],
 #prototyping:target nav [href="#prototyping"],
 #accessibility:target nav [href="#accessibility"],
 #career-skills:target nav [href="#career-skills"],
-#view-all-courses:target nav [href="#view-all-courses"] {
+#all-courses:target nav [href="#all-courses"] {
   background-color: #ff9;
+}
+
+:target nav [href="#all-courses"] {
+  background-color: transparent;
 }
 
 // #design:target nav [href="#web-design"],
@@ -449,8 +539,8 @@ label[for="toggle-tutorial"],
 // #full:target nav [href="#full"],
 // #short:target nav [href="#short"],
 // #tutorial:target nav [href="#tutorial"],
-// #view-all-courses:target nav [href="#view-all-courses"],
-// #view-all-formats:target nav [href="#view-all-formats"] {
+// #all-courses:target nav [href="#all-courses"],
+// #all-formats:target nav [href="#all-formats"] {
 //   background-color: #ff9;
 // }
 
