Update comment formatting

--- a/_sass/_theme-hacks.scss
+++ b/_sass/_theme-hacks.scss
@@ -353,9 +353,9 @@ https://github.com/gymnasium/tracker/issues/127
   font-family: $gym-font-stack;
 }
 
-/*--
+/* ---
 https://github.com/gymnasium/tracker/issues/84
---*/
+--- */
 
 /* update color contrast ratio */
 
