--- a/_sass/_theme-hacks.scss
+++ b/_sass/_theme-hacks.scss
@@ -1,10 +1,10 @@
-/* This file is intended to render CSS that we are serving up in the Gymnasium theme via the system-status include, and allows us using our SCSS variables */
+/* --- This file is intended to render CSS that we are serving up in the Gymnasium theme via the system-status include, and allows us using our SCSS variables --- */
 
 @import "functions";
 @import "mixins";
 @import "variables";
 
-/* --- Migrate logistration css out of theme --- */
+/* --- Migrate logistration css out of theme (see https://github.com/gymnasium/tracker/issues/192) --- */
 .login-register,
 #login-and-registration-container {
   background: transparent;
@@ -54,9 +54,8 @@ main label a:not([class]):active {
   }
 
   div.section-title.lines h2 {
-    font: bold 1.8em/1.15 "brandon-grotesque", "Helvetia Neue", Helvetica,
-      sans-serif;
-    font-family: "brandon-grotesque", "Helvetia Neue", Helvetica, sans-serif;
+    font: bold 1.8em/1.15 $gym-font-stack;
+    font-family: $gym-font-stack;
   }
 
   form {
@@ -65,8 +64,7 @@ main label a:not([class]):active {
   /*** linkedin Login button styles ***/
 
   p.action-label {
-    font: normal 1.6em/1.4 "brandon-grotesque", "Helvetia Neue", Helvetica,
-      sans-serif;
+    font: normal 1.6em/1.4 $gym-font-stack;
     margin-bottom: 1em;
   }
   $linked-in-blue: #0077b5;
@@ -82,7 +80,7 @@ main label a:not([class]):active {
     }
 
     span {
-      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-family: $gym-text-font-stack;
     }
   }
 
@@ -90,7 +88,7 @@ main label a:not([class]):active {
     label {
       font-size: 1.1em;
       text-transform: uppercase;
-      font-family: "Brandon Grotesque", "Helvetica Neue", Helvetica, sans-serif;
+      font-family: $gym-font-stack;
       font-weight: bold;
     }
 
@@ -108,7 +106,7 @@ main label a:not([class]):active {
     }
 
     .tip-input {
-      font: normal 1em/1.15 "Helvetia Neue", Helvetica, sans-serif;
+      font: normal 1em/1.15 $gym-text-font-stack;
     }
   }
 
@@ -119,7 +117,7 @@ main label a:not([class]):active {
     margin-top: 1.2em;
 
     h2 {
-      font-family: "Brandon Grotesque", "Helvetica Neue", Helvetica, sans-serif;
+      font-family: $gym-font-stack;
       padding: 0.75em 0;
       font-size: 2.2em;
       letter-spacing: 0.01em;
@@ -145,7 +143,7 @@ main label a:not([class]):active {
 
   .note {
     font-weight: bold;
-    color: #222;
+    color: $gym-black;
   }
 
   .toggle-form {
@@ -236,7 +234,7 @@ main label a:not([class]):active {
     margin-bottom: 1.8em;
 
     p {
-      font-family: brandon-grotesque, "Helvetica Neue", Helvetica, sans-serif;
+      font-family: $gym-font-stack;
       font-size: 1.6em;
       line-height: 1.5;
       letter-spacing: 0.01em;
@@ -246,7 +244,7 @@ main label a:not([class]):active {
 
   h2 {
     margin-bottom: 1.2em;
-    font: 900 1em/1.3 brandon-grotesque, "Helvetica Neue", Helvetica, sans-serif;
+    font: 900 1em/1.3 $gym-font-stack;
   }
 
   form {
@@ -288,7 +286,7 @@ main label a:not([class]):active {
   }
 
   .err-message li {
-    font: bold 1em/1.5 "Helvetica Neue", Helvetica, sans-serif;
+    font: bold 1em/1.5 $gym-text-font-stack;
     color: #d9534f;
     letter-spacing: 0.01em;
     margin-top: 1em;
@@ -313,15 +311,15 @@ body.register {
   ul.list-input,
   ol.list-input {
     label {
-      font: 1em/1.2 brandon-grotesque, "Helvetica Neue", Helvetica, sans-serif;
-      color: #222;
+      font: 1em/1.2 $gym-font-stack;
+      color: $gym-black;
       letter-spacing: 0.03em;
       word-spacing: 0.05em;
       text-transform: uppercase;
     }
 
     input {
-      font: 1em/1 "Helvetica Neue", Helvetica, sans-serif;
+      font: 1em/1 $gym-text-font-stack;
       width: 100%;
       padding-top: 0.6em;
       padding-bottom: 0.6em;
