--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -38,3 +38,7 @@ $breakpoints: (
   medium: 992px, // 62em
   large: 1200px // 75em
 );
+
+// Migrated from theme
+$linked-in-blue: #0077b5;
+$error-color: #d9534f; // replace with the magenta color above?
