--- a/dev/prototypes/courses/css/main.scss
+++ b/dev/prototypes/courses/css/main.scss
@@ -109,22 +109,49 @@ nav ul {
   margin-bottom: 0;
 }
 
+nav > div details,
+nav > div:first-child ul ~ ul {
+  border-top: 1px dashed #ccc;
+  padding-top: 0.8rem;
+  margin-top: 1rem;
+}
+
+nav details summary b {
+  font-size: 1.2em;
+  text-decoration: underline;
+  margin-left: 0.125rem;
+}
+
+nav details ul {
+  columns: 2 auto;
+  column-gap: 1.6rem;
+  margin-top: 1rem;
+  margin-right: -0.4rem;
+}
+
+nav details li {
+  line-height: 1.3;
+}
+
+nav details li > * {
+  display: inline;
+}
+
 nav > div:last-child ul {
   list-style: none;
 }
 
-nav li {
+nav li:not(li:first-child) {
   margin-top: 0.6rem;
 }
 
 nav p {
   font-size: 0.9em;
-  margin-top: 0.5rem;
+  margin-top: 0.4rem;
 }
 
 nav a {
   display: inline-block;
-  line-height: 1;
   padding: 0.2rem;
   margin-left: -0.2rem;
   margin-right: -0.2rem;
@@ -142,6 +169,7 @@ ul[role="list"] {
 
 ul[role="list"] > li {
   position: relative;
+  z-index: 1;
   display: grid;
   grid-auto-rows: 1fr auto;
   background-color: #eee;
@@ -192,23 +220,17 @@ li aside {
   line-height: 1.65;
   text-transform: uppercase;
   letter-spacing: 0.06rem;
+  white-space: nowrap;
   margin-right: 0.4rem;
 }
 
-.topics li:first-child {
-  background-color: #eee;
-  border: 1px solid #ccc;
-  padding-left: 0.325rem;
-  border-radius: 0.375rem;
-}
-
-.topics a {
-  display: inline-block;
-  padding: 0.125rem 0.125rem 0;
-  margin-top: 0.4rem;
-  margin-left: -0.125rem;
-  margin-right: 0.125rem;
-}
+// .topics a {
+//   display: inline-block;
+//   padding: 0.125rem 0.125rem 0;
+//   margin-top: 0.4rem;
+//   margin-left: -0.125rem;
+//   margin-right: 0.125rem;
+// }
 
 .format:not(div) {
   font-size: 0.9em;
@@ -319,128 +341,29 @@ summary {
   margin-left: 0.8rem;
 }
 
-// .input-toggle {
-//   float: left;
-//   margin-left: -1.25rem;
-//   margin-right: 0.25rem;
-// }
+nav .input-toggle {
+  float: left;
+  margin-left: -1.25rem;
+  margin-right: 0.25rem;
+}
 
-label[for="toggle-full"],
-label[for="toggle-short"],
-label[for="toggle-tutorial"] {
+header ~ label,
+header ~ input {
   position: absolute;
-  left: 1rem;
-  font-weight: bold;
+  white-space: nowrap;
+  clip: rect(0, 0, 0, 0);
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  border: 0;
+  margin: -1px;
+  overflow: hidden;
 }
 
-#toggle-full,
-#toggle-short,
-#toggle-tutorial {
-  display: inline-block;
-  position: absolute;
-  left: -0.4rem;
-}
-
-label[for="toggle-full"],
-#toggle-full {
-  top: 27rem;
-}
-
-label[for="toggle-short"],
-#toggle-short {
-  top: 30.4rem;
-}
-
-label[for="toggle-tutorial"],
-#toggle-tutorial {
-  top: 33.9rem;
-}
-
-@media (min-width: 40em) and (max-width: 64em) {
-
-label[for="toggle-full"],
-#toggle-full {
-  top: 9.2rem;
-  left: 18.5rem;
-  margin-left: 5%;
-}
-
-label[for="toggle-short"],
-#toggle-short {
-  top: 12.7rem;
-  left: 18.5rem;
-  margin-left: 5%;
-}
-
-label[for="toggle-tutorial"],
-#toggle-tutorial {
-  top: 16.1rem;
-  left: 18.5rem;
-  margin-left: 5%;
-}
-
-label[for="toggle-full"],
-label[for="toggle-short"],
-label[for="toggle-tutorial"] {
-  left: 20rem;
-}
-
-}
-
-@media (min-width: 64em) {
-
-label[for="toggle-full"],
-#toggle-full {
-  top: 28rem;
-}
-
-label[for="toggle-short"],
-#toggle-short {
-  top: 31.4rem;
-}
-
-label[for="toggle-tutorial"],
-#toggle-tutorial {
-  top: 34.9rem;
-}
-
-}
-
-// header ~ label,
-// header ~ input {
-//   position: absolute;
-//   white-space: nowrap;
-//   clip: rect(0, 0, 0, 0);
-//   width: 1px;
-//   height: 1px;
-//   padding: 0;
-//   border: 0;
-//   margin: -1px;
-//   overflow: hidden;
-// }
-
-#toggle-full:not(:checked) ~ [role="list"] .full,
-#toggle-short:not(:checked) ~ [role="list"] .short,
-#toggle-tutorial:not(:checked) ~ [role="list"] .tutorial {
+#toggle-full:not(:checked) ~ ul[role="list"] > li.full,
+#toggle-short:not(:checked) ~ ul[role="list"] > li.short,
+#toggle-tutorial:not(:checked) ~ ul[role="list"] > li.tutorial {
   display: none;
-}
-
-.input-toggle:checked ~ ul[role="list"] li.response {
-  display: none;
-}
-
-.input-toggle:not(:checked) ~ ul[role="list"] li.response {
-  display: grid;
-  background-color: #ff9;
-}
-
-[is="comp-1"] .topics :link,
-[is="comp-1"] .topics :hover,
-[is="comp-1"] .topics :focus {
-  text-decoration: none;
-  border-bottom: 0 none;
-  margin-bottom: 0;
-  pointer-events: none;
 }
 
 // #career-skills:target #toggle-full,
@@ -454,94 +377,218 @@ label[for="toggle-tutorial"],
 //   opacity: 0.5;
 // }
 
-:target li[class] {
+:target ul[role="list"] > li[class]:not(li.response) {
   display: none;
 }
 
-#design:target .design,
-#web-design:target .web-design,
-#html:target .html,
-#css:target .css,
-#figma:target .figma,
-#sketch:target .sketch,
-#adobe-xd:target .adobe-xd,
-#invision-studio:target .invision-studio,
-#virtual-reality:target .virtual-reality,
-#accessibility:target .accessibility,
-#design-systems:target .design-systems,
-#web-development:target .web-development,
-#javascript:target .javascript,
-#php:target .php,
-#github:target .github,
-#ux:target .ux,
-#prototyping:target .prototyping,
-#career-skills:target .career-skills,
-#productivity:target .productivity,
-#time-management:target .time-management,
-#full:target .full,
-#short:target .short,
-#tutorial:target .tutorial,
-#all-courses:target li[class],
-#all-formats:target li[class] {
+ul[role="list"] li.response {
+  position: absolute;
+  z-index: 0;
+  display: grid;
+  background-color: #ff9;
+}
+
+@media (max-width: 64em) {
+
+ul[role="list"]::after {
+  display: block;
+  content: "";
+  width: 100%;
+  height: 10em;
+}
+
+}
+
+#design:target ul[role="list"] > .design,
+#web-design:target ul[role="list"] > .web-design,
+#html:target ul[role="list"] > .html,
+#css:target ul[role="list"] > .css,
+#figma:target ul[role="list"] > .figma,
+#sketch:target ul[role="list"] > .sketch,
+#adobe-xd:target ul[role="list"] > .adobe-xd,
+#invision-studio:target ul[role="list"] > .invision-studio,
+#data-visualization:target ul[role="list"] > .data-visualization,
+#virtual-reality:target ul[role="list"] > .virtual-reality,
+#accessibility:target ul[role="list"] > .accessibility,
+#design-systems:target ul[role="list"] > .design-systems,
+#web-development:target ul[role="list"] > .web-development,
+#javascript:target ul[role="list"] > .javascript,
+#php:target ul[role="list"] > .php,
+#github:target ul[role="list"] > .github,
+#ux:target ul[role="list"] > .ux,
+#prototyping:target ul[role="list"] > .prototyping,
+#career-skills:target ul[role="list"] > .career-skills,
+#productivity:target ul[role="list"] > .productivity,
+#time-management:target ul[role="list"] > .time-management,
+#full:target ul[role="list"] > .full,
+#short:target ul[role="list"] > .short,
+#tutorial:target ul[role="list"] > .tutorial,
+#view-all-courses:target ul[role="list"] > li[class],
+#all-formats:target ul[role="list"] > li[class] {
   display: grid;
 }
 
-nav [href="#all-courses"],
+nav [href="#view-all-courses"],
 #web-design:target nav [href="#web-design"],
 #web-development:target nav [href="#web-development"],
 #ux:target nav [href="#ux"],
 #prototyping:target nav [href="#prototyping"],
 #accessibility:target nav [href="#accessibility"],
 #career-skills:target nav [href="#career-skills"],
-#all-courses:target nav [href="#all-courses"] {
+#html:target nav [href="#html"],
+#css:target nav [href="#css"],
+#javascript:target nav [href="#javascript"],
+#php:target nav [href="#php"],
+#github:target nav [href="#github"],
+#design-systems:target nav [href="#design-systems"],
+#figma:target nav [href="#figma"],
+#sketch:target nav [href="#sketch"],
+#adobe-xd:target nav [href="#adobe-xd"],
+#invision-studio:target nav [href="#invision-studio"],
+#data-visualization:target nav [href="#data-visualization"],
+#virtual-reality:target nav [href="#virtual-reality"],
+#productivity:target nav [href="#productivity"],
+#time-management:target nav [href="#time-management"],
+#view-all-courses:target nav [href="#view-all-courses"] {
   background-color: #ff9;
+  border-radius: 0.1875rem;
 }
 
-:target nav [href="#all-courses"] {
+:target nav [href="#view-all-courses"] {
   background-color: transparent;
+  outline: initial;
 }
 
-// #design:target nav [href="#web-design"],
-// #web-design:target nav [href="#web-design"],
-// #html:target nav [href="#web-design"],
-// #html:target nav [href="#web-development"],
-// #html:target nav [href="#accessibility"],
-// #css:target nav [href="#web-design"],
-// #css:target nav [href="#web-development"],
-// #css:target nav [href="#prototyping"],
-// #css:target nav [href="#accessibility"],
-// #figma:target nav [href="#web-design"],
-// #figma:target [is="comp-2"] nav [href="#ux"],
-// #figma:target nav [href="#prototyping"],
-// #sketch:target nav [href="#web-design"],
-// #sketch:target nav [href="#ux"],
-// #sketch:target nav [href="#prototyping"],
-// #adobe-xd:target nav [href="#web-design"],
-// #adobe-xd:target [is="comp-2"] nav [href="#ux"],
-// #adobe-xd:target nav [href="#prototyping"],
-// #invision-studio:target nav [href="#web-design"],
-// #invision-studio:target [is="comp-2"] nav [href="#ux"],
-// #invision-studio:target nav [href="#prototyping"]
-// #virtual-reality:target nav [href="#web-design"],
-// #web-development:target nav [href="#web-development"],
-// #javascript:target nav [href="#web-design"],
-// #javascript:target nav [href="#web-development"],
-// #php:target nav [href="#web-development"],
-// #github:target nav [href="#web-development"],
-// #ux:target nav [href="#ux"],
-// #prototyping:target nav [href="#prototyping"],
-// #prototyping:target [is="comp-2"] nav [href="#web-design"],
-// #prototyping:target [is="comp-2"] nav [href="#ux"],
-// #accessibility:target nav [href="#accessibility"],
-// #career-skills:target nav [href="#career-skills"],
-// #productivity:target nav [href="#career-skills"],
-// #time-management:target nav [href="#career-skills"],
-// #full:target nav [href="#full"],
-// #short:target nav [href="#short"],
-// #tutorial:target nav [href="#tutorial"],
-// #all-courses:target nav [href="#all-courses"],
-// #all-formats:target nav [href="#all-formats"] {
-//   background-color: #ff9;
-// }
+#web-design:target .topics li.web-design:not(li.web-design:first-child),
+#web-development:target .topics li.web-development:not(li.web-development:first-child),
+#ux:target .topics li.ux:not(li.ux:first-child),
+#prototyping:target .topics li.prototyping:not(li.prototyping:first-child),
+#accessibility:target .topics li.accessibility:not(li.accessibility:first-child),
+#career-skills:target .topics li.career-skills:not(li.career-skills:first-child),
+#html:target .topics li.html:not(li.html:first-child),
+#css:target .topics li.css:not(li.css:first-child),
+#javascript:target .topics li.javascript:not(li.javascript:first-child),
+#php:target .topics li.php:not(li.php:first-child),
+#github:target .topics li.github:not(li.github:first-child),
+#design-systems:target .topics li.design-systems:not(li.design-systems:first-child),
+#figma:target .topics li.figma:not(li.figma:first-child),
+#sketch:target .topics li.sketch:not(li.sketch:first-child),
+#adobe-xd:target .topics li.adobe-xd:not(li.adobe-xd:first-child),
+#invision-studio:target .topics li.invision-studio:not(li.invision-studio:first-child),
+#data-visualization:target .topics li.data-visualization:not(li.data-visualization:first-child),
+#virtual-reality:target .topics li.virtual-reality:not(li.virtual-reality:first-child),
+#productivity:target .topics li.productivity:not(li.productivity:first-child),
+#time-management:target .topics li.time-management:not(li.time-management:first-child) {
+  display: none;
+}
+
+#web-design:target .topics li:first-child:not(li.web-design:first-child)::before {
+  content: "web design";
+  white-space: nowrap;
+  margin-right: 0.625rem;
+}
+
+#web-development:target .topics li:first-child:not(li.web-development:first-child)::before {
+  content: "web development";
+  white-space: nowrap;
+  margin-right: 0.625rem;
+}
+
+#ux:target .topics li:first-child:not(li.ux:first-child)::before {
+  content: "ux";
+  margin-right: 0.625rem;
+}
+
+#prototyping:target .topics li:first-child:not(li.prototyping:first-child)::before {
+  content: "prototyping";
+  margin-right: 0.625rem;
+}
+
+#accessibility:target .topics li:first-child:not(li.accessibility:first-child)::before {
+  content: "accessibility";
+  margin-right: 0.625rem;
+}
+
+#career-skills:target .topics li:first-child:not(li.career-skills:first-child)::before {
+  content: "career skills";
+  white-space: nowrap;
+  margin-right: 0.625rem;
+}
+
+#html:target .topics li:first-child:not(li.html:first-child)::before {
+  content: "html";
+  margin-right: 0.625rem;
+}
+
+#css:target .topics li:first-child:not(li.css:first-child)::before {
+  content: "css";
+  margin-right: 0.625rem;
+}
+
+#javascript:target .topics li:first-child:not(li.javascript:first-child)::before {
+  content: "javascript";
+  margin-right: 0.625rem;
+}
+
+#php:target .topics li:first-child:not(li.php:first-child)::before {
+  content: "php";
+  margin-right: 0.625rem;
+}
+
+#github:target .topics li:first-child:not(li.github:first-child)::before {
+  content: "github";
+  margin-right: 0.625rem;
+}
+
+#design-systems:target .topics li:first-child:not(li.design-systems:first-child)::before {
+  content: "design systems";
+  white-space: nowrap;
+  margin-right: 0.625rem;
+}
+
+#figma:target .topics li:first-child:not(li.figma:first-child)::before {
+  content: "figma";
+  margin-right: 0.625rem;
+}
+
+#sketch:target .topics li:first-child:not(li.sketch:first-child)::before {
+  content: "sketch";
+  margin-right: 0.625rem;
+}
+
+#adobe-xd:target .topics li:first-child:not(li.adobe-xd:first-child)::before {
+  content: "adobe-xd";
+  white-space: nowrap;
+  margin-right: 0.625rem;
+}
+
+#invision-studio:target .topics li:first-child:not(li.invision-studio:first-child)::before {
+  content: "invision studio";
+  white-space: nowrap;
+  margin-right: 0.625rem;
+}
+
+#data-visualization:target .topics li:first-child:not(li.data-visualization:first-child)::before {
+  content: "data visualization";
+  white-space: nowrap;
+  margin-right: 0.625rem;
+}
+
+#virtual-reality:target .topics li:first-child:not(li.virtual-reality:first-child)::before {
+  content: "virtual reality";
+  white-space: nowrap;
+  margin-right: 0.625rem;
+}
+
+#productivity:target .topics li:first-child:not(li.productivity:first-child)::before {
+  content: "productivity";
+  margin-right: 0.625rem;
+}
+
+#time-management:target .topics li:first-child:not(li.time-management:first-child)::before {
+  content: "time management";
+  white-space: nowrap;
+  margin-right: 0.625rem;
+}
 
 }
