--- a/dev/prototypes/courses/css/main.scss
+++ b/dev/prototypes/courses/css/main.scss
@@ -6,6 +6,12 @@
   font-size: 100%;
 }
 
+/* Comp-only override  */
+
+.content-wrapper#content {
+  background-color: #fff;
+}
+
 /* Update brand/logo layout */
 
 #secondary-nav .navbar-brand {
@@ -61,15 +67,15 @@ main {
 
 }
 
-// @media (min-width: 64em) and (min-height: 42.5em) {
-//
-// main > header > div {
-//   position: sticky;
-//   top: 1.6rem;
-//   width: 100%;
-// }
-//
-// }
+@media (min-width: 64em) and (min-height: 42.5em) {
+
+main > header > div {
+  position: sticky;
+  top: 1.6rem;
+  width: 100%;
+}
+
+}
 
 main > header h1 {
   margin-top: 1rem;
@@ -99,9 +105,9 @@ nav {
   margin-bottom: 2rem;
 }
 
-nav > div:not(div:first-child) {
-  margin-top: 0.6rem;
-}
+// nav > div:not(div:first-child) {
+//   margin-top: 0.6rem;
+// }
 
 nav ul {
   list-style: initial;
@@ -109,33 +115,38 @@ nav ul {
   margin-bottom: 0;
 }
 
-nav > div details,
-nav > div:first-child ul ~ ul {
-  border-top: 1px dashed #ccc;
-  padding-top: 0.8rem;
-  margin-top: 1rem;
+nav div:first-child li:first-child {
+  list-style: none;
+  margin-left: -1rem;
 }
 
-nav details summary b {
-  font-size: 1.2em;
-  text-decoration: underline;
-  margin-left: 0.125rem;
-}
-
-nav details ul {
-  columns: 2 auto;
-  column-gap: 1.6rem;
-  margin-top: 1rem;
-  margin-right: -0.4rem;
-}
-
-nav details li {
-  line-height: 1.3;
-}
-
-nav details li > * {
-  display: inline;
-}
+// nav > div details,
+// nav > div:first-child ul ~ ul {
+//   border-top: 1px dashed #ccc;
+//   padding-top: 0.8rem;
+//   margin-top: 1rem;
+// }
+//
+// nav details summary b {
+//   font-size: 1.2em;
+//   text-decoration: underline;
+//   margin-left: 0.125rem;
+// }
+//
+// nav details ul {
+//   columns: 2 auto;
+//   column-gap: 1.6rem;
+//   margin-top: 1rem;
+//   margin-right: -0.4rem;
+// }
+//
+// nav details li {
+//   line-height: 1.3;
+// }
+//
+// nav details li > * {
+//   display: inline;
+// }
 
 nav > div:last-child ul {
   list-style: none;
@@ -209,7 +220,9 @@ li aside {
 }
 
 .topics {
+  display: none;
   padding-left: 0;
+  margin-top: 0.4rem;
   margin-bottom: 0;
 }
 
@@ -237,7 +250,6 @@ li aside {
   font-weight: bolder;
   text-transform: capitalize;
   margin-top: 0;
-  margin-bottom: 0.4rem;
 }
 
 .full .format::after,
@@ -282,12 +294,12 @@ summary {
   width: 100%;
 }
 
-.info[open] summary b {
-  visibility: hidden;
+.info summary b::before {
+  content: "Show ";
 }
 
 .info[open] summary b::before {
-  content: "Close ";
+  content: "Hide ";
   visibility: visible;
 }
 
@@ -366,16 +378,13 @@ header ~ input {
   display: none;
 }
 
-// #career-skills:target #toggle-full,
-// #career-skills:target #toggle-short {
-//   cursor: not-allowed;
-//   pointer-events: none;
-//   filter: grayscale(1);
-// }
-//
-// #career-skills:target #toggle-full {
-//   opacity: 0.5;
-// }
+#accessibility:target #toggle-full-ui,
+#career-skills:target #toggle-full-ui {
+  cursor: no-drop;
+  user-select: none;
+  filter: grayscale(1);
+  opacity: 0.5;
+}
 
 :target ul[role="list"] > li[class]:not(li.response) {
   display: none;
@@ -423,12 +432,11 @@ ul[role="list"]::after {
 #full:target ul[role="list"] > .full,
 #short:target ul[role="list"] > .short,
 #tutorial:target ul[role="list"] > .tutorial,
-#view-all-courses:target ul[role="list"] > li[class],
-#all-formats:target ul[role="list"] > li[class] {
+#all:target ul[role="list"] > li[class] {
   display: grid;
 }
 
-nav [href="#view-all-courses"],
+nav [href="#all"],
 #web-design:target nav [href="#web-design"],
 #web-development:target nav [href="#web-development"],
 #ux:target nav [href="#ux"],
@@ -449,12 +457,12 @@ nav [href="#view-all-courses"],
 #virtual-reality:target nav [href="#virtual-reality"],
 #productivity:target nav [href="#productivity"],
 #time-management:target nav [href="#time-management"],
-#view-all-courses:target nav [href="#view-all-courses"] {
+#all:target nav [href="#all"] {
   background-color: #ff9;
   border-radius: 0.1875rem;
 }
 
-:target nav [href="#view-all-courses"] {
+:target nav [href="#all"] {
   background-color: transparent;
   outline: initial;
 }
