--- a/_includes/heros/hero-take5-campaign.html
+++ b/_includes/heros/hero-take5-campaign.html
@@ -1,4 +1,4 @@
-<link rel="preload" href="{{ site.url }}/img/take5/posters/gym-5019-hero.jpg" as="image">
+<link rel="preload" as="image" media="(min-width: 1200em)" href="{{ site.url }}/img/take5/posters/gym-5019-hero.jpg">
 <link rel="stylesheet" href="{{ site.url }}/css/hero-take5-campaign.css?{{ site.time | date:'%s' }}">
 
 <div class="hero-promo" id="hero-take5-campaign">
