Update CSS animation
- Add @include fades keyframe override
- Update decimal value, add leading zero for consistency/readability

--- a/css/hero-take5-campaign.scss
+++ b/css/hero-take5-campaign.scss
@@ -88,6 +88,34 @@
 
 @include fades;
 
+@keyframes fade-1 {
+
+  0% {
+    opacity: 1;
+  }
+
+  20% {
+    opacity: 0;
+  }
+
+  40% {
+    opacity: 0;
+  }
+
+  60% {
+    opacity: 0;
+  }
+
+  80% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+
+}
+
 #hero-take5-campaign::after {
   display: block;
   position: absolute;
@@ -100,7 +128,7 @@
   background: linear-gradient(135deg, $gym-green, $gym-green, $gym-teal, $gym-teal, $gym-magenta, $gym-magenta, $gym-orange);
   background-size: 700% 700%;
   animation: 60s cubic-bezier(0.445, 0.05, 0.55, 0.95) infinite running ebb-flow;
-  opacity: .95;
+  opacity: 0.95;
   z-index: 1;
 }
 
