--- a/dev/prototypes/courses/css/main.scss
+++ b/dev/prototypes/courses/css/main.scss
@@ -67,14 +67,17 @@ main {
 
 }
 
+@supports (position: sticky) {
 @media (min-width: 64em) and (min-height: 40em) {
 
 main > header > div {
   position: sticky;
   top: 1.6rem;
   width: 100%;
+  height: min-content;
 }
 
+}
 }
 
 main > header h1 {
