Fixes one more instance of "grey"

--- a/_sass/_theme-hacks.scss
+++ b/_sass/_theme-hacks.scss
@@ -433,7 +433,7 @@ body.view-in-course {
 /* global theme styles */
 
 .caret {
-  color: $gym-light-grey;
+  color: $gym-light-gray;
 }
 
 body header.global.slim {
@@ -506,7 +506,7 @@ div.wrapper-footer {
       margin-top: 30px;
 
       li {
-        border-right: 1px solid $gym-medium-grey;
+        border-right: 1px solid $gym-medium-gray;
         height: 100%;
         padding-right: 8px;
 
@@ -981,7 +981,7 @@ code * {
 
   a:hover,
   a:link:hover {
-    color: $gym-light-grey;
+    color: $gym-light-gray;
   }
 }
 
