--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,5 +1,6 @@
 // Colors
 $gym-orange: #f8971d;
+$gym-orange-light: rgba(248, 151, 32, 0.9);
 $gym-black: #222;
 $gym-white: #fff;
 $gym-gray: #ccc;
