Evidently medium gray in the theme is dark gray in gymcms

--- a/_sass/_theme-hacks.scss
+++ b/_sass/_theme-hacks.scss
@@ -506,7 +506,7 @@ div.wrapper-footer {
       margin-top: 30px;
 
       li {
-        border-right: 1px solid $gym-medium-gray;
+        border-right: 1px solid $gym-dark-gray;
         height: 100%;
         padding-right: 8px;
 
