Update Take 5 title font-weight
- Update inherited bolder weight to bold (Hello, Windows!)

--- a/css/take5.scss
+++ b/css/take5.scss
@@ -38,6 +38,10 @@
 
 // reset default (text) links
 
+#main .title a {
+  font-weight: bold;
+}
+
 #main .title a,
 #main [class="all-caps"] a {
   line-height: 1.35;
