Restore border on course pages

--- a/_sass/_theme-hacks.scss
+++ b/_sass/_theme-hacks.scss
@@ -25,7 +25,7 @@ html body button {
 
 .content-wrapper .container,
 .container {
-  border: none;
+  // border: none;
   background: transparent;
   padding-top: 0;
   padding-bottom: 0;
