--- a/css/main.scss
+++ b/css/main.scss
@@ -1975,7 +1975,7 @@ https://github.com/gymnasium/tracker/issues/40
 
 
 /* ---
-Footer CSS
+Footer CSS (migrated from footer.scss)
 --- */
 
 #contentinfo {
