Comment out meta includes on default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>{{ page.title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    {%- include partials/meta.html -%}
+    <!-- {%- include partials/meta.html -%} -->
+    <style></style>
   </head>
   <body>
     {{ content }}
