Adds bootstrap, moves links out of theme

--- a/_includes/partials/test-bottom.html
+++ b/_includes/partials/test-bottom.html
@@ -3,5 +3,16 @@
 In favor of DRY-ness, we're including the component below in multiple places...
 {%-endcomment-%}
 {%- include partials/footer.html -%}
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.17.0/jquery.validate.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.22.0/prism.min.js"></script>
+<script
+  src="{{site.gymurl}}/static/gymnasium/js/cookiebanner.0960edf8dcf3.js"
+  id="cookiebanner"
+  data-link="#f89820"
+  data-message="We use cookies to enhance your experience. By continuing to visit this site you agree to our use of cookies. Find out more about how we use cookies in our"
+  data-linkmsg="Privacy Policy."
+  data-moreinfo="/privacy"
+></script>
 </body>
 </html>
