--- a/_includes/partials/footer.html
+++ b/_includes/partials/footer.html
@@ -124,3 +124,8 @@ JS or tracking pixels to be included at the bottom of the theme
 {%- comment -%} Disabling for now...- RE
 <iframe id="geolocator" src="{{ geolocator_src }}" frameborder="0" style="width:1px;height:1px;visibility:hidden;display:none;"></iframe>
 {%- endcomment -%}
+
+<script defer src="{{site.url}}/js/vendor/bootstrap.min.js?{{ site.time | date:'%s' }}"></script>
+<script async defer src="{{site.url}}/js/vendor/jquery.validate.min.js?{{ site.time | date:'%s' }}"></script>
+<script async defer src="{{site.url}}/js/vendor/prism.min.js?{{ site.time | date:'%s' }}"></script>
+<script async defer src="{{site.url}}/js/vendor/cookiebanner.js?{{ site.time | date:'%s' }}" id="cookiebanner" data-link="#f89820" data-message="We use cookies to enhance your experience. By continuing to visit this site you agree to our use of cookies. Find out more about how we use cookies in our" data-linkmsg="Privacy Policy." data-moreinfo="/privacy"></script>
