--- a/_includes/partials/meta/tags.html
+++ b/_includes/partials/meta/tags.html
@@ -73,4 +73,4 @@ Migrate from theme to gymcms
 <script async defer src="//use.typekit.net/rhf0qta.js"></script>
 <script>try{Typekit.load();}catch(e){}</script>
 
-<link rel="stylesheet" href="{{ site.url }}/css/bootstrap-3.3.7.min.css?{{ site.time | date:'%s' }}" crossorigin="anonymous">
+<link rel="stylesheet" href="{{ site.url }}/css/vendor/bootstrap.min.css?{{ site.time | date:'%s' }}" crossorigin="anonymous">
