--- a/css/main.scss
+++ b/css/main.scss
@@ -2112,11 +2112,12 @@ TODO: migrate discussion CSS out of theme
     // Add post button
     button {
       background-color: $gym-orange;
-      border-color: $gym-orange;
+      border: 1px solid $gym-orange;
       
       &:active,
       &:hover {
-        border-color: $gym-orange;
+        background-color: $gym-light-gray;
+        border: 1px solid $gym-light-gray;
       }
     }
   }
