--- a/_includes/partials/meta/tags.html
+++ b/_includes/partials/meta/tags.html
@@ -63,14 +63,14 @@ Exclude rendered CSS in meta tags on localhost, for development/convenience reas
 {%- comment -%}
 Migrate from theme to gymcms
 {%- endcomment -%}
-<link rel="preload" href="{{ site.url }}/fonts/brandon_reg-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-<link rel="preload" href="{{ site.url }}/fonts/brandon_reg_it-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-<link rel="preload" href="{{ site.url }}/fonts/brandon_bld-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-<link rel="preload" href="{{ site.url }}/fonts/brandon_bld_it-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-<link rel="preload" href="{{ site.url }}/fonts/brandon_blk-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-<link rel="preload" href="{{ site.url }}/fonts/brandon_blk_it-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+<link rel="preload" href="{{ site.url }}/fonts/brandon_reg-webfont.woff2" as="font" type="font/woff2">
+<link rel="preload" href="{{ site.url }}/fonts/brandon_reg_it-webfont.woff2" as="font" type="font/woff2">
+<link rel="preload" href="{{ site.url }}/fonts/brandon_bld-webfont.woff2" as="font" type="font/woff2">
+<link rel="preload" href="{{ site.url }}/fonts/brandon_bld_it-webfont.woff2" as="font" type="font/woff2">
+<link rel="preload" href="{{ site.url }}/fonts/brandon_blk-webfont.woff2" as="font" type="font/woff2">
+<link rel="preload" href="{{ site.url }}/fonts/brandon_blk_it-webfont.woff2" as="font" type="font/woff2">
 
 <script async defer src="//use.typekit.net/rhf0qta.js"></script>
 <script>try{Typekit.load();}catch(e){}</script>
 
-<link rel="stylesheet" href="{{ site.url }}/css/vendor/bootstrap.min.css?{{ site.time | date:'%s' }}" crossorigin="anonymous">
+<link rel="stylesheet" href="{{ site.url }}/css/vendor/bootstrap.min.css?{{ site.time | date:'%s' }}">
