Strip .min from filename, un-minify for local use

--- a/_includes/partials/meta/tags.html
+++ b/_includes/partials/meta/tags.html
@@ -73,4 +73,4 @@ Migrate from theme to gymcms
 <script async defer src="//use.typekit.net/rhf0qta.js"></script>
 <script>try{Typekit.load();}catch(e){}</script>
 
-<link rel="stylesheet" href="{{ site.url }}/css/vendor/bootstrap.min.css?{{ site.time | date:'%s' }}">
+<link rel="stylesheet" href="{{ site.url }}/css/vendor/bootstrap.css?{{ site.time | date:'%s' }}">
