Quick fix for webinars spacing issue
See https://github.com/gymnasium/tracker/issues/223

--- a/css/collections.scss
+++ b/css/collections.scss
@@ -1,5 +1,7 @@
 ---
 ---
+// TODO: refactor webinars.scss and collections.scss into one holistic, agnostic stylesheet
+
 @import 'variables';
 @import 'mixins';
 
